--- a/views/loginform.html
+++ b/views/loginform.html
@@ -1,9 +1,55 @@
-<table> <form method="POST" action="/login"> 
-Please login to use this web site<br />
-<tr><td>Username:</td><td><input size=10 type="text" name="usrLogin"></td></tr> 
-<tr><td>Password:</td><td><input size=10 type="password" name="usrPassword"></td></tr> 
-<tr><td></td><td><input type="submit" name="submit" value="Login"></td></tr> 
-</form> 
-</table> 
+<style>
+    .login-form {
+        max-width: 400px;
+        margin: 0 auto;
+    }
 
-Feel free to <a href='/register'>Register</a> to use this web site.
+    .form-group {
+        margin-bottom: 10px;
+    }
+
+    label {
+        display: inline-block;
+        font-weight: bold;
+        background-color: navy;
+        color:white;    
+        padding: 8px;
+    }
+
+    input[type='text'] {
+        max-width: 100%;
+        padding: 8px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    .btn-submit {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .btn-submit:hover {
+        background-color: #45a049;
+    }
+
+</style>
+<div class="login-form">
+    <form method="POST" action="/login"> 
+        <p>Please login to use this web site</p>
+        <div class="form-group">
+            <label for="usrLogin">Username:</label>
+            <input type="text" name="usrLogin" id="usrLogin" size="10">
+        </div>
+        <div class="form-group">
+            <label for="usrPassword">Password:</label>
+            <input type="password" name="usrPassword" id="usrPassword" size="10">
+        </div>
+        <button type="submit" name="submit">Login</button>
+    </form> 
+    <p>Feel free to <a href="/register">Register</a> to use this web site.</p>
+</div>
