--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,9 +1,13 @@
 
 <h2>Welcome</h2>
 
-<p>Hi and welcome to the <b>Social Fun Zone</b>, a fun way to keep in touch with friends, family and all your acquaintances.</p>
+<p>Hi and welcome to the <b>Node Login Demo</b>, a simple login demo using node, mongo, express.</p>
 <p>
-This was created a basic social network using <a href='http://www.nodejs.org'>Node js</a> and MongoDB to store data. Feel free to register and poke around. <p>
-At this point, it is far from competing with giants like facebook and this still needs a lot of work. Feel free to send us suggestions.
+This was created a basic login demo for <a href='http://www.nodejs.org'>Node js</a> and MongoDB to store data.</p>
+<p>Feel free to register and poke around. <p>
+<p>This is definitely not for competing with social network giants and this still needs a lot of work but it shows off a few components.</p
+
+<p>
+Feel free to send us suggestions.
 </p>
-<p>Have fun!!</p>
+<p>Meanwhile Have fun, redefine limits and enjoy life!</p>
